--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,23 +3,25 @@
     "jquery": true,
     "browser": true
   },
-  "overrides": [
-    {
-      "files": ["src/**/*.js"],
-      "extends": ["airbnb-base", "prettier"],
-      "rules": {
-        "semi": ["error", "always"],
-        "quotes": ["error", "single"],
-        "import/no-unresolved": "off",
-        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
-      },
-      "settings": {
-        "import/resolver": {
-          "node": {
-            "extensions": [".js"]
-          }
-        }
+  "extends": ["airbnb-base", "prettier"],
+  "rules": {
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never"
+      }
+    ],
+    "semi": ["error", "always"],
+    "quotes": ["error", "single"],
+    "import/no-unresolved": "off",
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js"]
       }
     }
-  ]
+  }
 }
