--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "extends": ["airbnb-base", "prettier"],
   "rules": {
+    "import/prefer-default-export": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
