--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
+    "intersection-observer": "^0.12.0",
     "jquery": "^3.5.0",
     "libphonenumber-js": "^1.9.20",
     "normalize.css": "^8.0.1",
