--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "intersection-observer": "^0.12.0",
     "jquery": "^3.5.0",
     "libphonenumber-js": "^1.9.20",
+    "lozad": "^1.16.0",
     "normalize.css": "^8.0.1",
     "smoothscroll-polyfill": "^0.4.4"
   },
