--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "libphonenumber-js": "^1.9.20",
     "lozad": "^1.16.0",
     "normalize.css": "^8.0.1",
-    "smoothscroll-polyfill": "^0.4.4"
+    "smoothscroll-polyfill": "^0.4.4",
+    "sweetalert2": "^11.0.18"
   },
   "editorconfig-cli": [
     "*.json",
